--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -16,7 +16,14 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai um resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
-    <div>Clique em mim</div>
-    <script></script>
+    <div id="msg">Clique em mim</div>
+    <script>
+      var p1 = window.document.getElementsByTagName("p")[1];
+      p1.style.color = "black";
+      document.write(p1.innerHTML);
+      var d = window.document.getElementById("msg");
+      d.style.background = "green";
+      d.innerText = "Estou aguardando...";
+    </script>
   </body>
 </html>
