--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -23,6 +23,7 @@
       a.addEventListener("click", clicar);
       a.addEventListener("mouseenter", entrar);
       a.addEventListener("mouseout", sair);
+      a.addEventListener("mouseover", destacar);
 
       function clicar() {
         a.innerText = "Clicou!";
@@ -33,7 +34,11 @@
       }
       function sair() {
         a.innerText = "Saiu!";
-        a.style.background = "green";
+        a.style.background = "rgb(4, 177, 4)";
+        a.style.border = "";
+      }
+      function destacar() {
+        a.style.border = "2px solid black";
       }
     </script>
   </body>
