--- a/aula12ex/modelo/modelo.html
+++ b/aula12ex/modelo/modelo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../modelo/style.css" />
     <title>Modelo de Exercício</title>
   </head>
   <body>
@@ -17,6 +17,6 @@
     <footer>
       <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="../modelo/script.js"></script>
   </body>
 </html>
