--- a/aula12ex/ex015/modelo.html
+++ b/aula12ex/ex015/modelo.html
@@ -3,20 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../modelo/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Modelo de Exercício</title>
   </head>
   <body>
     <header>
-      <h1>Título</h1>
+      <h1>Verificador de Idade</h1>
     </header>
     <section>
-      <div>Testando...</div>
-      <div></div>
+      <div>
+        <p>
+          Ano de Nascimento:
+          <input type="number" name="txtano" id="txtano" />
+        </p>
+        <p>
+          Sexo:
+          <input type="radio" name="radsex" id="mas" checked />
+          <label for="mas">Masculino</label>
+          <input type="radio" name="radsex" id="fem" />
+          <label for="fem">Feminino</label>
+        </p>
+        <p><input type="button" value="Verificar" onclick="verificar()" /></p>
+      </div>
+      <div id="res">Preencha os dados acima para ver o resultado!</div>
     </section>
     <footer>
       <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="../modelo/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
