--- a/aula16ex/modelo/index.html
+++ b/aula16ex/modelo/index.html
@@ -11,17 +11,16 @@
       <h1>Analisador de Números</h1>
     </header>
     <section>
-      <div id="dados">
-        Número (entre 1 e 100): <input type="number" name="num" id="num" /><input
+      <div>
+        Número (entre 1 e 100): <input type="number" name="fnum" id="fnum" /><input
           type="button"
           value="Adicionar"
           onclick="adicionar()"
         />
-      </div>
-      <div id="res">
-        <select name="analise" id="anatab" size="5"></select>
+        <select name="flista" id="flista" size="6"></select>
       </div>
       <div><input type="button" value="Finalizar" onclick="finalizar()" /></div>
+      <div id="res"></div>
     </section>
     <footer>
       <p>&copy; CursoemVideo</p>
